--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: abc_pay
-description: A new Flutter project.
+description: Flutter农行掌银支付.
 version: 1.0.0
 homepage: https://www.qfy.com
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=2.17.6 <4.0.0"
   flutter: ">=2.5.0"
 
 dependencies:
